// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsPane renders error condition correctly 1`] = `
<div
  class="osq-results-hold"
>
  <header
    style=""
  >
    <h2
      class="osq-resultsheader"
    >
      
                Sorry, a server error has occurred.  Please try your search again later.
            
    </h2>
  </header>
   
  <div
    class="osq-results"
    style=""
  >
    <!---->
     
  </div>
</div>
`;

exports[`ResultsPane renders no results found correctly 1`] = `
<div
  class="osq-results-hold"
>
  <header
    style=""
  >
    <h2
      class="osq-resultsheader"
    >
      
                Results: None
            
    </h2>
  </header>
   
  <div
    class="osq-results"
    style=""
  >
    <span>
      
                Please try another search.
            
    </span>
     
  </div>
</div>
`;

exports[`ResultsPane renders results correctly 1`] = `
<div
  class="osq-results-hold"
>
  <header
    style=""
  >
    <h2
      class="osq-resultsheader"
    >
      
                Results:  books
            
    </h2>
  </header>
   
  <div
    class="osq-results"
    style=""
  >
    <!---->
     
    <div
      class="book-summary-hold"
      id="9781111111111"
      name="Title 1 Highlighting"
    >
      <article
        class="book-summary"
      >
        <div
          class="thumb"
          role="presentation"
        >
          <a
            aria-hidden="true"
            href="/books/9781111111111/"
            tabindex="-1"
          >
            <img
              alt=""
              class="img-fluid"
              src="/open-square-reader/epub_content/9781111111111/ops/images/9781111111111-th.jpg"
            />
          </a>
        </div>
         
        <div
          class="meta"
        >
          <div
            class="book-title-group"
          >
            <a
              href="/books/9781111111111"
            >
              <div
                class="book-title"
              >
                Title 1 
                <mark>
                  Highlighting
                </mark>
              </div>
               
              <div
                class="book-subtitle"
              >
                Subtitle 1
              </div>
            </a>
          </div>
           
          <div
            class="author"
          >
            Author One with Author Two, Author Three, Author Four, Author Five and Author Six
          </div>
           
          <div
            class="pubdate"
          >
            <span>
              Published: 
            </span>
            <span>
              2018
            </span>
          </div>
           
          <div
            class="description meta"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis ut diam quam nulla porttitor. Tellus in hac habitasse platea dictumst vestibulum rhoncus est. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget. Tincidunt dui ut ornare lectus sit amet est. Quam quisque id diam vel quam elementum pulvinar etiam non. Quisque non tellus orci ac auctor augue mauris augue neque. Mi ipsum faucibus vitae aliquet nec…
          </div>
        </div>
      </article>
    </div>
    <div
      class="book-summary-hold"
      id="9781111111112"
      name="Title 2"
    >
      <article
        class="book-summary"
      >
        <div
          class="thumb"
          role="presentation"
        >
          <a
            aria-hidden="true"
            href="/books/9781111111112/"
            tabindex="-1"
          >
            <img
              alt=""
              class="img-fluid"
              src="/open-square-reader/epub_content/9781111111112/ops/images/9781111111112-th.jpg"
            />
          </a>
        </div>
         
        <div
          class="meta"
        >
          <div
            class="book-title-group"
          >
            <a
              href="/books/9781111111112"
            >
              <div
                class="book-title"
              >
                Title 2
              </div>
               
              <div
                class="book-subtitle"
              >
                Subtitle 2 
                <mark>
                  Highlights
                </mark>
              </div>
            </a>
          </div>
           
          <div
            class="author"
          >
            Author Seven, Author Eight
          </div>
           
          <div
            class="pubdate"
          >
            <span>
              Published: 
            </span>
            <span>
              2016
            </span>
          </div>
           
          <div
            class="description meta"
          >
            Rhoncus est pellentesque elit ullamcorper dignissim cras. Potenti nullam ac tortor vitae purus faucibus. Pulvinar mattis nunc sed blandit libero volutpat sed cras. Aliquam sem et tortor consequat. Est ante in nibh mauris cursus mattis molestie a. Risus in hendrerit gravida rutrum quisque non tellus orci ac. Arcu non sodales neque sodales ut etiam. Posuere lorem ipsum dolor sit amet. Adipiscing elit ut aliquam purus sit amet luctus venenatis lectus. Tempor id eu nisl nunc. Risus at ultrices mi…
          </div>
        </div>
      </article>
    </div>
    <div
      class="book-summary-hold"
      id="9781111111113"
      name="Title 3"
    >
      <article
        class="book-summary"
      >
        <div
          class="thumb"
          role="presentation"
        >
          <a
            aria-hidden="true"
            href="/books/9781111111113/"
            tabindex="-1"
          >
            <img
              alt=""
              class="img-fluid"
              src="/open-square-reader/epub_content/9781111111113/ops/images/9781111111113-th.jpg"
            />
          </a>
        </div>
         
        <div
          class="meta"
        >
          <div
            class="book-title-group"
          >
            <a
              href="/books/9781111111113"
            >
              <div
                class="book-title"
              >
                Title 3
              </div>
               
              <div
                class="book-subtitle"
              >
                Subtitle 3
              </div>
            </a>
          </div>
           
          <div
            class="author"
          >
            Author 
            <mark>
              Highlight
            </mark>
            , Author Nine
          </div>
           
          <div
            class="pubdate"
          >
            <span>
              Published: 
            </span>
            <span>
              2019
            </span>
          </div>
           
          <div
            class="description meta"
          >
            Scelerisque felis imperdiet proin fermentum. Netus et malesuada fames ac turpis. Phasellus faucibus scelerisque eleifend donec. Velit scelerisque in dictum non consectetur a erat nam at. Ut sem nulla pharetra diam sit amet nisl suscipit. Velit ut tortor pretium viverra suspendisse potenti. Mi in nulla posuere sollicitudin. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. In eu mi bibendum neque. Id consectetur purus ut faucibus pulvinar elementum integer.…
          </div>
        </div>
      </article>
    </div>
    <div
      class="book-summary-hold"
      id="9781111111114"
      name="Title 4"
    >
      <article
        class="book-summary"
      >
        <div
          class="thumb"
          role="presentation"
        >
          <a
            aria-hidden="true"
            href="/books/9781111111114/"
            tabindex="-1"
          >
            <img
              alt=""
              class="img-fluid"
              src="/open-square-reader/epub_content/9781111111114/ops/images/9781111111114-th.jpg"
            />
          </a>
        </div>
         
        <div
          class="meta"
        >
          <div
            class="book-title-group"
          >
            <a
              href="/books/9781111111114"
            >
              <div
                class="book-title"
              >
                Title 4
              </div>
               
              <div
                class="book-subtitle"
              >
                Subtitle 4
              </div>
            </a>
          </div>
           
          <div
            class="author"
          >
            Author Ten, Author Eleven, Author Twelve, Author Thirteen, Author Fourteen and Author Fifteen
          </div>
           
          <div
            class="pubdate"
          >
            <span>
              Published: 
            </span>
            <span>
              <mark>
                2000
              </mark>
            </span>
          </div>
           
          <div
            class="description meta"
          >
            Egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Aliquam ut porttitor leo a diam sollicitudin. In dictum non consectetur a. Fringilla ut morbi tincidunt augue interdum velit. Risus at ultrices mi tempus imperdiet nulla. Risus quis varius quam quisque id. Natoque penatibus et magnis dis parturient montes nascetur. Nibh praesent tristique magna sit amet purus gravida. Eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Egestas integer eget aliquet nibh praesent…
          </div>
        </div>
      </article>
    </div>
    <div
      class="book-summary-hold"
      id="9781111111115"
      name="Title 5"
    >
      <article
        class="book-summary"
      >
        <div
          class="thumb"
          role="presentation"
        >
          <a
            aria-hidden="true"
            href="/books/9781111111115/"
            tabindex="-1"
          >
            <img
              alt=""
              class="img-fluid"
              src="/open-square-reader/epub_content/9781111111115/ops/images/9781111111115-th.jpg"
            />
          </a>
        </div>
         
        <div
          class="meta"
        >
          <div
            class="book-title-group"
          >
            <a
              href="/books/9781111111115"
            >
              <div
                class="book-title"
              >
                Title 5
              </div>
               
              <div
                class="book-subtitle"
              >
                Subtitle 5
              </div>
            </a>
          </div>
           
          <div
            class="author"
          >
            Author Sixteen, Author Seventeen, Author Eighteen, Author Nineteen, Author Twenty
          </div>
           
          <div
            class="pubdate"
          >
            <span>
              Published: 
            </span>
            <span>
              2016
            </span>
          </div>
           
          <div
            class="description meta"
          >
            …In dictum 
            <mark>
              HIGHLIGHT
            </mark>
             non consectetur a erat nam at lectus urna. Euismod in pellentesque massa 
            <mark>
              highlights
            </mark>
             placerat duis ultricies lacus. Auctor urna nunc id cursus metus aliquam eleifend 
            <mark>
              Highlight
            </mark>
             mi in. Sapien pellentesque habitant morbi tristique senectus et netus et. Sed enim ut sem viverra aliquet. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Interdum velit laoreet id donec ultrices tincidunt arcu non. Sociis natoque penatibus et magnis dis parturient montes. Vulputate ut pharetra sit amet aliquam id diam maecenas. Elit duis tristique sollicitudin nibh sit amet commodo nulla.…
          </div>
        </div>
      </article>
    </div>
  </div>
</div>
`;
